Re-factoring. Using LESS, theme support added.
- LESS is used to keep styles organized and modular
- Color information is extracted into theme configuration
- Three themes are created: bluish, greenish and default

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Flock</title>
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="build/client/app.css">
   </head>
   <body>
     <section id="flockapp"></section>
