Added routing support using react-router.
- Changes to the build process and test running to support ES6 syntax
- Updated the tests for Header and Content to mock routing properly
- Added URL rewriting rules to server.js to properly serve 'configuration' and 'participation' subpathes
- Added stubs for the Event and Participants tabs

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Flock</title>
-    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="build/dev/client/app.css">
+    <link rel="stylesheet" href="/node_modules/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/build/dev/client/app.css">
   </head>
   <body>
     <section id="flockapp"></section>
-    <script src="build/dev/client/bundle.js"></script>
+    <script src="/build/dev/client/bundle.js"></script>
   </body>
 </html>
